--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -114,6 +114,11 @@
           "description": "Only render visible part of the document. This can improve performance but still being experimental.",
           "type": "boolean",
           "default": true
+        },
+        "typst-preview.cursorIndicator": {
+          "description": "(Experimental) Show typst cursor indicator in preview.",
+          "type": "boolean",
+          "default": false
         }
       }
     }
