--- a/addons/frontend/package.json
+++ b/addons/frontend/package.json
@@ -12,9 +12,8 @@
     "link:local": "yarn link @myriaddreamin/typst.ts @myriaddreamin/typst-ts-renderer"
   },
   "dependencies": {
-    "@myriaddreamin/typst.ts": "0.4.0-rc7",
-    "@myriaddreamin/typst-ts-renderer": "0.4.0-rc7",
-    "rxjs": "^7.8.1"
+    "@myriaddreamin/typst.ts": "0.4.0-rc8",
+    "@myriaddreamin/typst-ts-renderer": "0.4.0-rc8"
   },
   "devDependencies": {
     "typescript": "^5.0.2",
