--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -157,7 +157,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "typst-preview-frontend": "^0",
+    "typst-preview-frontend": "../frontend",
     "@types/cross-spawn": "^6.0.2",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
