--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -53,14 +53,14 @@
       {
         "command": "typst-preview.preview-slide",
         "title": "Typst Preview: Preview current file in slide mode",
-        "description": "Launch typst-preview server with ?slide=true",
+        "description": "Launch typst-preview server in slide mode",
         "icon": "$(open-preview)",
         "when": "resourceLangId == typst && editorTextFocus"
       },
       {
         "command": "typst-preview.browser-slide",
         "title": "Typst Preview: Preview current file in browser and slide mode",
-        "description": "Launch typst-preview server with ?slide=true and open the preview in your browser",
+        "description": "Launch typst-preview server in slide mode and open the preview in your browser",
         "icon": "$(open-preview)",
         "when": "resourceLangId == typst && editorTextFocus"
       },
