feat: initialize slide mode (#177)
* slide mode

* dev: adjust height, vscode theme

* dev: bind more keys

* fix: regard scrollbar in layout

* dev: add help panel

* dev: update help messages

* Refactor typst-preview commands to improve
descriptions.

* fix: sticky scrolling

* fix: centering pages on zooming

* fix: wrong condition of scale

* fix: zoom in slide mode

* revert: fix: sticky scrolling

* revert: fix: wrong condition of scale

---------

Co-authored-by: mgt <mgt@oi-wiki.org>

--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -51,6 +51,20 @@
         "when": "resourceLangId == typst && editorTextFocus"
       },
       {
+        "command": "typst-preview.preview-slide",
+        "title": "Typst Preview: Preview current file in slide mode",
+        "description": "Launch typst-preview server in slide mode",
+        "icon": "$(open-preview)",
+        "when": "resourceLangId == typst && editorTextFocus"
+      },
+      {
+        "command": "typst-preview.browser-slide",
+        "title": "Typst Preview: Preview current file in browser and slide mode",
+        "description": "Launch typst-preview server in slide mode and open the preview in your browser",
+        "icon": "$(open-preview)",
+        "when": "resourceLangId == typst && editorTextFocus"
+      },
+      {
         "command": "typst-preview.sync",
         "title": "Typst Preview: Sync preview with current cursor",
         "description": "Scroll preview to current cursor position",
