dev: nitpick addons/vscode/package.json
Co-authored-by: Wenzhuo Liu <mgt@oi-wiki.org>

--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -168,7 +168,7 @@
           "default": false
         },
         "typst-preview.showInActivityBar": {
-          "description": "(Experimental) Show typst preview's view containers in activity bar.",
+          "description": "(Experimental) Show a preview panel in activity bar.",
           "type": "boolean",
           "default": false
         },
