--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,15 @@ bench = false
 doc = false
 
 [dependencies]
-typst = "0.9.0"
-typst-library = "0.9.0"
-typst-ts-svg-exporter = "0.4.0-rc7"
-typst-ts-core = { version = "0.4.0-rc7", default-features = false, features = [
+typst = "0.10.0"
+# typst-library = "0.10.0"
+typst-ts-svg-exporter = "0.4.1"
+typst-ts-core = { version = "0.4.1", default-features = false, features = [
   "flat-vector",
   "vector-bbox",
+  "no-content-hint"
 ] }
-typst-ts-compiler = "0.4.0-rc7"
+typst-ts-compiler = "0.4.1"
 
 chrono = { version = "0.4", default-features = false, features = [
   "clock",
@@ -35,13 +36,13 @@ memmap2 = "0.7"
 notify = "6"
 once_cell = "1"
 same-file = "1"
-siphasher = "0.3"
+siphasher = "1"
 walkdir = "2"
 clap = { version = "4.2.4", features = ["derive", "env"] }
 open = "5.0.0"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-tungstenite = "0.20.0"
-tiny-skia = "0.10.0"
+tiny-skia = "0.11"
 env_logger = "0.10.0"
 log = "0.4.17"
 serde_json = "1.0.95"
@@ -53,13 +54,13 @@ hyper = { version = "0.14", features = ["full"] }
 
 
 [patch.crates-io]
-typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.9.0" }
-typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.9.0" }
-typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.9.0" }
-hayagriva = { git = "https://github.com/Myriad-Dreamin/hayagriva.git", branch = "typst.ts-v0.9.0" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "7871cb8e7135351951d8fe5e63eccb1883e8342e", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "7871cb8e7135351951d8fe5e63eccb1883e8342e", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "7871cb8e7135351951d8fe5e63eccb1883e8342e", package = "typst-ts-compiler" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0" }
+# typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0" }
+typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0" }
+hayagriva = { git = "https://github.com/typst/hayagriva", tag = "v0.5.1"}
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58f88e9842905d70c6822e8fd2db8b3e9a59be27", package = "typst-ts-svg-exporter" }
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58f88e9842905d70c6822e8fd2db8b3e9a59be27", package = "typst-ts-core"}
+typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58f88e9842905d70c6822e8fd2db8b3e9a59be27", package = "typst-ts-compiler" }
 
 # typst = { path = "../../rust/typst/crates/typst" }
 # typst-library = { path = "../../rust/typst/crates/typst-library" }
