--- a/addons/frontend/package.json
+++ b/addons/frontend/package.json
@@ -12,8 +12,8 @@
     "link:local": "yarn link @myriaddreamin/typst.ts @myriaddreamin/typst-ts-renderer"
   },
   "dependencies": {
-    "@myriaddreamin/typst-ts-renderer": "0.4.0-rc11",
-    "@myriaddreamin/typst.ts": "0.4.0-rc11",
+    "@myriaddreamin/typst-ts-renderer": "0.4.1",
+    "@myriaddreamin/typst.ts": "0.4.1",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
