--- a/addons/typst-dom/package.json
+++ b/addons/typst-dom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typst-preview-frontend",
+  "name": "typst-dom",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,17 +11,20 @@
     "coverage": "vitest run --coverage",
     "link:local": "yarn link @myriaddreamin/typst.ts @myriaddreamin/typst-ts-renderer"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@myriaddreamin/typst-ts-renderer": "0.4.2-rc1",
-    "@myriaddreamin/typst.ts": "0.4.2-rc1",
-    "typst-dom": "file:../typst-dom",
-    "rxjs": "^7.8.1"
+    "@myriaddreamin/typst.ts": "0.4.2-rc1"
   },
   "devDependencies": {
+    "@myriaddreamin/typst-ts-renderer": "0.4.2-rc1",
+    "@myriaddreamin/typst.ts": "0.4.2-rc1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-singlefile": "^0.13.5",
     "vite-plugin-wasm": "^3.2.2",
     "vitest": "^0.32.2"
+  },
+  "exports": {
+    "./*": "./dist/esm/*"
   }
 }
