--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: |
+          yarn
+          yarn build
+        working-directory: ./addons/typst-dom
       - run: yarn
         working-directory: ./addons/frontend
       - run: |
@@ -119,6 +123,10 @@ jobs:
           submodules: recursive
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.3
+      - run: |
+          yarn
+          yarn build
+        working-directory: ./addons/typst-dom
       - run: yarn
         working-directory: ./addons/frontend
       - run: |
