--- a/addons/typst-dom/package.json
+++ b/addons/typst-dom/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build && tsc",
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
