dev: create typst-dom and split functionalities (#214)
* dev: create typst-dom to maintain

* chore: chore updates

* fix: build scripts

* dev: use latest typst-dom

* dev: remove dirty change

--- a/addons/typst-dom/package.json
+++ b/addons/typst-dom/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "typst-preview-frontend",
+  "name": "typst-dom",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build && tsc",
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "link:local": "yarn link @myriaddreamin/typst.ts @myriaddreamin/typst-ts-renderer"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@myriaddreamin/typst-ts-renderer": "0.4.2-rc4",
-    "@myriaddreamin/typst.ts": "0.4.2-rc4",
-    "typst-dom": "file:../typst-dom",
-    "rxjs": "^7.8.1"
+    "@myriaddreamin/typst.ts": "0.4.2-rc4"
   },
   "devDependencies": {
+    "@myriaddreamin/typst-ts-renderer": "0.4.2-rc4",
+    "@myriaddreamin/typst.ts": "0.4.2-rc4",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-singlefile": "^0.13.5",
     "vite-plugin-wasm": "^3.2.2",
     "vitest": "^0.32.2"
+  },
+  "exports": {
+    ".": "./dist/esm/index.mjs",
+    "./*": "./dist/esm/*"
   }
 }
