--- a/addons/typst-dom/package.json
+++ b/addons/typst-dom/package.json
@@ -25,7 +25,7 @@
     "vitest": "^0.32.2"
   },
   "exports": {
-    ".": "./dist/esm/index.mjs",
-    "./*": "./dist/esm/*"
+    ".": "./src/index.mts",
+    "./*": "./src/*"
   }
 }
