fix font and add lock

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Download font assets
         # use fonts in stable releases
         run: |
-          curl -L https://github.com/Myriad-Dreamin/typst-book/releases/download/v0.1.2/charter-font-assets.tar.gz | tar -xvz -C assets/fonts
+          curl -L https://github.com/Myriad-Dreamin/typst-book/releases/download/v0.1.2/font-assets.tar.gz | tar -xvz -C assets/fonts
           curl -L https://use.fontawesome.com/releases/v6.4.2/fontawesome-free-6.4.2-desktop.zip -o fontawesome-free-6.4.2-desktop.zip
           unzip fontawesome-free-6.4.2-desktop.zip
           cp -v -r fontawesome-free-6.4.2-desktop/otfs/* assets/fonts/
