--- a/addons/frontend/package.json
+++ b/addons/frontend/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@myriaddreamin/typst-ts-renderer": "0.4.2-rc5",
     "@myriaddreamin/typst.ts": "0.4.2-rc5",
-    "typst-dom": "file:../typst-dom",
+    "typst-dom": "link:../typst-dom",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
