--- a/addons/frontend/package.json
+++ b/addons/frontend/package.json
@@ -14,11 +14,11 @@
   "dependencies": {
     "@myriaddreamin/typst-ts-renderer": "0.4.2-rc5",
     "@myriaddreamin/typst.ts": "0.4.2-rc5",
-    "typst-dom": "file:../typst-dom",
+    "typst-dom": "link:../typst-dom",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
+    "typescript": "^5.3.3",
     "vite": "^4.3.9",
     "vite-plugin-singlefile": "^0.13.5",
     "vite-plugin-wasm": "^3.2.2",
