--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 
 [[bin]]
 name = "typst-preview"
+required-features = ["cli"]
 path = "src/main.rs"
 test = false
 doctest = false
@@ -16,30 +17,20 @@ doc = false
 [dependencies]
 typst = "0.10.0"
 # typst-library = "0.10.0"
+
 typst-ts-svg-exporter = "0.4.2-rc6"
 typst-ts-core = { version = "0.4.2-rc6", default-features = false, features = [
   "flat-vector",
   "vector-bbox",
-  "no-content-hint",
 ] }
-typst-ts-compiler = "0.4.2-rc6"
-
-chrono = { version = "0.4", default-features = false, features = [
-  "clock",
-  "std",
-] }
-codespan-reporting = "0.11"
+typst-ts-compiler = { version = "0.4.2-rc6", optional = true }
 comemo = "0.3"
-dirs = "5"
 elsa = "1.7"
 memmap2 = "0.9.2"
 notify = "6"
 once_cell = "1"
-same-file = "1"
-siphasher = "1"
-walkdir = "2"
-clap = { version = "4.2.4", features = ["derive", "env"] }
-open = "5.0.0"
+clap = { version = "4.2.4", features = ["derive", "env"], optional = true }
+open = { version = "5.0.0", optional = true }
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-tungstenite = "0.21.0"
 tiny-skia = "0.11"
@@ -51,10 +42,8 @@ indexmap = "2"
 # https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372
 # <= 1.0.171 due to serde-rs/serde#2538
 serde = "1.0.188"
-hyper = { version = "0.14", features = ["full"] }
 await-tree = "0.1.2"
-
-
+hyper = { version = "0.14", features = ["full"], optional = true }
 [patch.crates-io]
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0-half" }
 typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0-half" }
@@ -81,8 +70,10 @@ vergen = { version = "8.2.5", features = [
   "rustc",
 ] }
 anyhow = "1.0.75"
+
 [features]
-default = ["embed-fonts"]
+
+default = ["embed-fonts", "cli"]
 
 # Embeds Typst's default fonts for
 # - text (Linux Libertine),
@@ -91,6 +82,11 @@ default = ["embed-fonts"]
 # and additionally New Computer Modern for text
 # into the binary.
 embed-fonts = []
+# Disable the default content hint.
+# This requires modifying typst.
+no-content-hint = ["typst-ts-core/no-content-hint"]
+
+cli = ["hyper", "clap", "open", "typst-ts-compiler", "no-content-hint"]
 
 [profile.release]
 debug = true
