dev: use spawnSync to test exec and add version checking

--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -16,7 +16,7 @@
     "Other"
   ],
   "activationEvents": [],
-  "main": "./out/extension.js",
+  "main": "./out/src/extension.js",
   "contributes": {
     "icons": {
       "typst-guy": {
