--- a/addons/vscode/tsconfig.json
+++ b/addons/vscode/tsconfig.json
@@ -5,8 +5,9 @@
     "outDir": "out",
     "lib": ["ES2020"],
     "sourceMap": true,
-    "rootDir": "src",
+    "rootDir": ".",
     "skipLibCheck": true,
+    "resolveJsonModule": true,
     "strict": true /* enable all strict type-checking options */
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
