--- a/addons/vscode/package.json
+++ b/addons/vscode/package.json
@@ -83,6 +83,11 @@
         "title": "Note: Jumping to source location of the outline item doesn't work well if its body doesn't have source location, e.g.\n```\n#let my-heading(h) = heading(h) // will jump to here\n#my-heading(\"Title\") // will not jump to here\n```.\nHence, you may want to use `my-heading[Title]` instead to gain better experience of outline jumping.",
         "description": "...",
         "icon": "$(extensions-info-message)"
+      },
+      {
+        "command": "typst-preview.showAwaitTree",
+        "title": "Typst Preview: [debug] Show Await Tree",
+        "description": "Show await tree of typst-preview. This is used for debugging."
       }
     ],
     "menus": {
@@ -243,11 +248,11 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "typst-preview-frontend": "file:../frontend",
     "@types/cross-spawn": "^6.0.2",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/node-fetch": "^2.6.11",
     "@types/vscode": "^1.77.0",
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
@@ -258,11 +263,13 @@
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "rimraf": "^5.0.1",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "typst-preview-frontend": "file:../frontend"
   },
   "dependencies": {
     "cpr": "^3.0.1",
     "cross-spawn": "^7.0.3",
+    "node-fetch": "^2.7.0",
     "vscode-variables": "^0.1.3",
     "ws": "^8.13.0"
   }
