use split debug symbol
https://doc.rust-lang.org/rustc/codegen-options/index.html#split-debuginfo

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,7 +31,7 @@
 			"type": "cargo",
 			"command": "build",
 			"args": [
-				"--profile=rel_dev"
+				"--profile=release"
 			],
 			"problemMatcher": [
 				"$rustc"
@@ -44,21 +44,21 @@
 			"windows": {
 				"command": "cp",
 				"args": [
-					"${workspaceFolder}\\target\\rel_dev\\typst-preview.exe",
+					"${workspaceFolder}\\target\\release\\typst-preview.exe",
 					"${workspaceFolder}\\addons\\vscode\\out\\"
 				]
 			},
 			"linux": {
 				"command": "cp",
 				"args": [
-					"${workspaceFolder}/target/rel_dev/typst-preview",
+					"${workspaceFolder}/target/release/typst-preview",
 					"${workspaceFolder}/addons/vscode/out/"
 				]
 			},
 			"osx": {
 				"command": "cp",
 				"args": [
-					"${workspaceFolder}/target/rel_dev/typst-preview",
+					"${workspaceFolder}/target/release/typst-preview",
 					"${workspaceFolder}/addons/vscode/out/"
 				]
 			}
