--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,8 +121,8 @@ jobs:
         if: matrix.platform == 'darwin'
         uses: actions/upload-artifact@v4
         with:
-          name: typst-preview-${{ env.target }}.dSYM
-          path: target/${{ matrix.rust-target }}/release/typst-preview.dSYM
+          name: typst-preview-${{ env.target }}.dSYM.tar.gz
+          path: target/${{ matrix.rust-target }}/release/typst-preview.dSYM.tar.gz
 
   build_alpine:
     name: build (x86_64-unknown-linux-musl)
