ci: adjust ci trigger

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,12 @@
 name: CI
 on:
   push:
+    branches:
+      - main
   pull_request:
+    types: [opened, synchronize]
+    branches:
+      - main
   workflow_dispatch:
 
 env:
