--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,12 @@
 name: CI
 on:
   push:
+    branches:
+      - main
   pull_request:
+    types: [opened, synchronize]
+    branches:
+      - main
   workflow_dispatch:
 
 env:
@@ -12,6 +17,19 @@ env:
   RUSTC_WRAPPER: "sccache"
 
 jobs:
+  pre_build:
+    permissions:
+      actions: write
+      contents: read
+    name: Duplicate Actions Detection
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@v5
+        with:
+          cancel_others: 'true'
   build:
     strategy:
       matrix:
@@ -59,16 +77,20 @@ jobs:
           submodules: recursive
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.4
-      - uses: actions/setup-node@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 16
-      - run: |
+      - name: Build typst-dom
+        run: |
           yarn
           yarn build
         working-directory: ./addons/typst-dom
-      - run: yarn
+      - name: Build frontend
+        run: yarn
         working-directory: ./addons/frontend
-      - run: |
+      - name: Build vscode extension
+        run: |
           yarn
           yarn run compile
         working-directory: ./addons/vscode
@@ -86,22 +108,52 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install gcc-arm-linux-gnueabihf
-      - shell: pwsh
+      - name: Build typst-preview binary
+        shell: pwsh
         run: |
           cargo build --release -p typst-preview --target ${{ matrix.rust-target }}
           cp "target/${{ matrix.rust-target }}/release/typst-preview$(If ('${{ matrix.platform }}' -eq 'win32') { '.exe' } else { '' } )" "addons/vscode/out/"
           cp "target/${{ matrix.rust-target }}/release/typst-preview$(If ('${{ matrix.platform }}' -eq 'win32') { '.exe' } else { '' } )" "typst-preview-${{ env.target }}$(If ('${{ matrix.platform }}' -eq 'win32') { '.exe' } else { '' } )"
-      - shell: pwsh
+      - name: Package extension
+        shell: pwsh
         run: yarn run package -- --target ${{ env.target }} -o typst-preview-${{ env.target }}.vsix
         working-directory: ./addons/vscode
-      - uses: actions/upload-artifact@v4
+      - name: Upload VSIX artifact
+        uses: actions/upload-artifact@v4
         with:
           name: typst-preview-${{ env.target }}.vsix
           path: addons/vscode/typst-preview-${{ env.target }}.vsix
-      - uses: actions/upload-artifact@v4
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v4
         with:
           name: typst-preview-${{ env.target }}
           path: typst-preview-${{ env.target }}${{ fromJSON('["", ".exe"]')[matrix.platform == 'win32'] }}
+      # window: .pdb, linux: .dwp, mac: .dSYM
+      - name: Upload split debug symbols for windows
+        if: matrix.platform == 'win32'
+        uses: actions/upload-artifact@v4
+        with:
+          name: typst_preview-${{ env.target }}.pdb
+          path: target/${{ matrix.rust-target }}/release/typst_preview.pdb
+      - name: Upload split debug symbols for linux
+        if: matrix.platform == 'linux'
+        uses: actions/upload-artifact@v4
+        with:
+          name: typst-preview-${{ env.target }}.dwp
+          path: target/${{ matrix.rust-target }}/release/typst-preview.dwp
+      - name: Package split debug symbols for mac
+      # note that debug symbols on mac is a symlink to the actual dSYM directory
+        if: matrix.platform == 'darwin'
+        run: |
+          cp -LR "target/${{ matrix.rust-target }}/release/typst-preview.dSYM" "typst-preview.dSYM"
+          tar -czf "target/${{ matrix.rust-target }}/release/typst-preview.dSYM.tar.gz" "typst-preview.dSYM"
+      - name: Upload split debug symbols for mac
+        if: matrix.platform == 'darwin'
+        uses: actions/upload-artifact@v4
+        with:
+          name: typst-preview-${{ env.target }}.dSYM.tar.gz
+          path: target/${{ matrix.rust-target }}/release/typst-preview.dSYM.tar.gz
+          compression-level: 0
 
   build_alpine:
     name: build (x86_64-unknown-linux-musl)
@@ -123,33 +175,43 @@ jobs:
           submodules: recursive
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.4
-      - run: |
+      - name: Build typst-dom
+        run: |
           yarn
           yarn build
         working-directory: ./addons/typst-dom
-      - run: yarn
+      - name: Build frontend
+        run: yarn
         working-directory: ./addons/frontend
-      - run: |
+      - name: Build vscode extension
+        run: |
           yarn
           yarn run compile
         working-directory: ./addons/vscode
-      - name: build server binary
+      - name: Build typst-preview binary
         run: |
           cargo build --release -p typst-preview --target $RUST_TARGET
           mkdir -p addons/vscode/out
           cp "target/$RUST_TARGET/release/typst-preview" "addons/vscode/out/"
           cp "target/$RUST_TARGET/release/typst-preview" "typst-preview-alpine-x64"
-      - name: package extension
+      - name: Package extension
         run: yarn run package -- --target ${{ env.target }} -o typst-preview-${{ env.target }}.vsix
         working-directory: ./addons/vscode
-      - uses: actions/upload-artifact@v4
+      - name: Upload VSIX artifact
+        uses: actions/upload-artifact@v4
         with:
           name: typst-preview-${{ env.target }}.vsix
           path: addons/vscode/typst-preview-${{ env.target }}.vsix
-      - uses: actions/upload-artifact@v4
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v4
         with:
           name: typst-preview-${{ env.target }}
           path: typst-preview-${{ env.target }}
+      - name: Upload split debug symbols
+        uses: actions/upload-artifact@v4
+        with:
+          name: typst-preview-${{ env.target }}.dwp
+          path: target/{{ env.RUST_TARGET }}/release/typst-preview.dwp
 
   release:
     runs-on: ubuntu-latest
